# nixos

./: .gitignore  Makefile  coc-settings.json  common.nix  configuration.nix  dev-env.nix  flake.nix  graphical.nix  hardware-configuration.nix  home.nix  init.vim  install.sh  iso.nix  laptop.nix  luks-passphrase.asc  mimeapps.list  pi.nix  polybar.ini  pre-commit  public.asc  services.nix  ssh-laptop.pub  ssh-workstation.pub  system.nix  workstation.nix  wsl-home.nix  wsl-system.nix
home-workstation/: configuration.nix  hardware-configuration.nix
laptop/: configuration.nix  hardware-configuration.nix
lenovo-laptop/: configuration.nix  hardware-configuration.nix
modules/: common.nix  default.nix  direnv.nix  entertainment.nix  fzf.nix  git.nix  graphical.nix  lesspipe.nix  live-wallpaper.nix  lsd.nix  pass.nix  polybar.nix  wallpaper.nix
overlays/: coc-nvim.nix  default.nix  kitty.nix  picom.nix  qutebrowser.nix  rofi.nix  vscodium.nix  xmonad-config.nix
overlays/lib/: default.nix  wrap-programs.nix
overlays/xmonad-config/: Main.hs  default.nix  polybar.ini  xmonad-config.cabal
system/: laptop.nix  workstation.nix
work-workstation/: configuration.nix  hardware-configuration.nix
xmonad/: Main.hs  default.nix  polybar.ini  xmonad-config.cabal
