cabal-version: 2.2
name: xmonad-config
version: 0.1.0.0
license: GPL-3.0-or-later
author: Gregory C. Oakes
maintainer: gregcoakes@gmail.com
executable xmonad-config
  main-is: Main.hs
  build-depends: base
               , containers
               , dbus
               , utf8-string
               , X11
               , xmonad
               , xmonad-contrib
               , xmonad-extras
  default-language: Haskell2010
